# exif_flutter

./: README.md  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
android/: CMakeLists.txt  build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/beakyn/exif/: ExifPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/beakyn/exif_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: exif.podspec  exif_flutter.podspec
ios/Classes/: ExifPlugin.h  ExifPlugin.m  SwiftExifPlugin.swift  exif_native.cpp  native_add.cpp
ios/Classes/libexif/lib/: libexif.so.12.3.3
ios/Frameworks/libexif/: LICENSE  README.md  libexif.podspec
ios/Frameworks/libexif/libexif/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
ios/Frameworks/libexif/libexif.xcodeproj/: project.pbxproj
ios/Frameworks/libexif/libexif.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lib/: exif.dart  exif_flutter.dart  tags.dart
